--- a/templates/base.html
+++ b/templates/base.html
@@ -334,6 +334,11 @@
                                     <a href="{{ url_for('admin.dashboard') }}">
                                         <i class="fas fa-cogs mr-2"></i>Admin Panel
                                     </a>
+                                    {% if session.user_role == 'Admin' %}
+                                    <a href="{{ url_for('admin.organization_settings') }}">
+                                        <i class="fas fa-building mr-2"></i>Organization Settings
+                                    </a>
+                                    {% endif %}
                                 {% endif %}
 
                                 <hr>
